--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"vite build && firebase deploy"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
